*finish xor get_address helper function for gshare *finish taken/not_taken global history reg shift functions *finish some tests

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,18 @@
 CC=gcc
 OPTS=-g -std=c99 -Werror
 
-all: main.o predictor.o
-	$(CC) $(OPTS) -lm -o predictor main.o predictor.o
+all: main.o predictor.o predictorTest.o
+	$(CC) $(OPTS) -lm -o predictor main.o predictor.o predictorTest.o
 
 main.o: main.c predictor.h
 	$(CC) $(OPTS) -c main.c
 
+predictorTest.o: predictor.h
+	$(CC) $(OPTS) -c predictorTest.c
+
 predictor.o: predictor.h predictor.c
 	$(CC) $(OPTS) -c predictor.c
+
 
 clean:
 	rm -f *.o predictor;
